force-app/main/default/objects/pi__PardotTask__c/pi__PardotTask__c.object-meta.xml
<CustomObject>
    <description>Used by Pardot to upsert standard Tasks and prevent the creation of duplicates.</description>
    <label>Pardot Task</label>
    <nameField>
        <label>Pardot Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pardot Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>