force-app/main/default/objects/pi__PardotTask__c/fields/pi__ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>pi__ErrorMessage__c</fullName>
    <description>Any error that occurred during Task creation</description>
    <label>ErrorMessage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>