force-app/main/default/objects/pi__PardotTask__c/fields/pi__PardotSourceId__c.field-meta.xml
<CustomField>
    <fullName>pi__PardotSourceId__c</fullName>
    <description>A unique identifier for the PardotTask that is generated in Pardot by combining the source table name and the source record id.</description>
    <externalId>true</externalId>
    <label>PardotSourceId</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>