force-app/main/default/objects/pi__PardotTask__c/fields/pi__SerializedTask__c.field-meta.xml
<CustomField>
    <fullName>pi__SerializedTask__c</fullName>
    <description>Holds JSON data representing the Task (sObject) fields and values to be inserted/updated.</description>
    <label>SerializedTask</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>