force-app/main/default/objects/pi__PardotTask__c/fields/pi__Status__c.field-meta.xml
<CustomField>
    <fullName>pi__Status__c</fullName>
    <defaultValue>&quot;READY&quot;</defaultValue>
    <description>The status of the Task that is to be created from this object</description>
    <label>Status</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>