force-app/main/default/objects/pi__PardotTask__c/fields/pi__TaskId__c.field-meta.xml
<CustomField>
    <fullName>pi__TaskId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>A foreign key to the Task sObject.</description>
    <label>TaskId</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>